[metadata]
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
description = Symbolic constants in Python
long_description = file: README.rst
keywords = constants,enum,twisted
license = MIT
name = constantly
url = https://github.com/twisted/constantly
maintainer = Twisted Matrix Labs Developers

[options]
packages = find:
python_requires = >= 3.8

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = constantly/_version.py
versionfile_build = constantly/_version.py
tag_prefix =
parentdir_prefix = constantly-
